[package]
name = "hexviewer"
version = "0.1.0"
authors = ["mgt <mgt@oi-wiki.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
evalexpr = "5.0.5"
rustyline =  { version = "8.0.0", features = ["with-fuzzy"] }
rustyline-derive = "0.4.0"
